- New option to display a Print icon in the detailpage
- New option to display a PDF icon in the detailpage
- New option to display a eMail icon in the detailpage
- New option to display a Share icon in the detailpage
- Subtitle as an option field added
- Module support URL added
- First sample page after a fresh module installation

UPDATED:
- jquery sliderkit updated to version 1.9.2

FIXED:
- Set the logged in User as default within the form
- slider-demos.css is much more smaller now
- Bugfix for global search within StartHandler.php (submitter -> creator)
- Link to the comments improved
- The link from "title" and "read more" was brocken from the "block_select_content"
- The updated date was not set in the edit form
- HTML bugfix in the teaser text (many thanks to @debianus)



2.2 Final from 9th August. 2012

Changelog:

ADDED:
- Frontend: Actionicons within the detailpage to edit and delete a content
- Minor adjustments to ensure compatibility with Sprockets 2.0 for the future
- Japanese language files (unfinished)
- Added the categories into the form from sprockets (thank you to @Madfish)

FIXED:
- Fix slow page loading index page problem in file "cms/admin/index.php"
(http://community.impresscms.org/modules/newbb/viewtopic.php?viewmode=flat&type=&topic_id=5218&forum=9)
- Bugfix in breadcrumb
- Tag design for the front end page improved

DELETE:
- Links from the Frontend to the Modul Administration



2.1 Final from 29th Mar. 2012

Changelog:

CHANGED:
- Style from button deleted, otherwise you can get a issue with your theme

FIXED:
- Error in the module administration fixed



2.0 Final from 19th Mar. 2012

Changelog:

ADDED:
- Function for SEO-URL added (backend, front end and global search)
- Link to the comments from the module (module ACP)
- A note within the manual (How can I add PHP scripts)

DELETE:
- Regular date from the templates deleted
	(You can add if you like - see manual)



1.0 Final from 16th Feb. 2012

Changelog:
