@@ -31,7 +31,7 @@
 			
 			<h3>Install the module "Sprockets"</h3>
 			
-				<p>At first we need to install the Sprockets Module. Important is to use version 1.1 or higher.</p>
+				<p>At first we need to install the Sprockets Module. Important is to use version 2.0 or higher.</p>
 				<p>Create some tags with the Sprockets Module.</p>
 		
 			<h3>Check out the module preferences</h3>
